Fix homepage URL for GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Mysteriev/product-card-app",
+  "homepage": "https://Mysteriev.github.io/product-card-app",
   "name": "product-card-app",
   "version": "0.1.0",
   "private": true,
